--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <a href="javascript:void(0)" onclick="toggleSub(this)">KEUANGAN <i class="fa-solid fa-chevron-down arrow-down"></i></a>
                 <ul class="sub-menu">
                     <li><a href="#">Akunting</a></li>
-                    <li><a href="#">ArusKas Peralihan</a></li>
+                    <li><a href="https://docs.google.com/spreadsheets/d/1tEa6ZTxRukCzc7h3NhNR9udMDgr_idJM/edit?usp=drive_link&ouid=115538875971759995931&rtpof=true&sd=true">Arus Kas</a></li>
                     <li><a href="#">Backup Transaksi</a></li>
                     <li><a href="#">Backup Nota User</a></li>
                     <li><a href="#">Cost Control</a></li>
@@ -332,7 +332,7 @@
                     <li class="has-sub">
                         <a href="javascript:void(0)" onclick="toggleSub(this)">Tagihan <i class="fa-solid fa-chevron-right arrow-right"></i></a>
                         <ul class="sub-menu sub-sub">
-                            <li><a href="#">Toko 1</a></li>
+                            <li><a href="https://docs.google.com/spreadsheets/d/13LVAGyVUc4tbjgNupHtgzai2E4cz2pLN/edit?usp=drive_link&ouid=115538875971759995931&rtpof=true&sd=true">Data Urug</a></li>
                             <li><a href="#">Toko 2</a></li>
                             <li><a href="#">Toko 3</a></li>
                         </ul>
@@ -344,7 +344,7 @@
                 <a href="javascript:void(0)" onclick="toggleSub(this)">MARKETING <i class="fa-solid fa-chevron-down arrow-down"></i></a>
                 <ul class="sub-menu">
                     <li><a href="#">Web Marketing</a></li>
-                    <li><a href="#">Berkas KPR</a></li>
+                    <li><a href="https://docs.google.com/spreadsheets/d/1rDUzeUSvH38k7L4jMwXgreiBcQjfJkGl/edit?usp=drive_link&ouid=115538875971759995931&rtpof=true&sd=true">Berkas KPR</a></li>
                     <li><a href="#">Site Plan Plotting</a></li>
                     <li><a href="#">Data Visor</a></li>
                 </ul>
