--- a/main.html
+++ b/main.html
@@ -305,7 +305,7 @@
                     <li><a href="#">Akunting</a></li>
                     <li><a href="https://docs.google.com/spreadsheets/d/1tEa6ZTxRukCzc7h3NhNR9udMDgr_idJM/edit?usp=drive_link&ouid=115538875971759995931&rtpof=true&sd=true">Arus Kas</a></li>
                     <li><a href="#">Backup Transaksi</a></li>
-                    <li><a href="#">Backup Nota User</a></li>
+                    <li><a href="https://docs.google.com/spreadsheets/d/1dmTn1rqeo0KELe7r_6giPul6jYBrxMf2ZHXKlBRP4nU/edit?usp=drive_link">Backup Nota User</a></li>
                     <li><a href="#">Cost Control</a></li>
                     <li><a href="#">Admin Keuangan</a></li>
                     <li><a href="#">Income Total</a></li>
@@ -448,3 +448,4 @@
 </body>
 
 </html>
+
