--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Login Sederhana</title>
+    <title>Halaman Login</title>
     <style>
         /* --- BAGIAN CSS (TAMPILAN) --- */
         body {
