--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <title>Sodiq GrandSon - Dashboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
+    <link rel="icon" href="icon.png">
     <style>
         /* --- 1. VARIABEL & RESET --- */
         :root {
@@ -448,4 +448,5 @@
 </body>
 
 </html>
+
 
