--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman Login</title>
+    <link rel="icon" href="icon.png">
+
     <style>
         /* --- BAGIAN CSS (TAMPILAN) --- */
         body {
