--- a/main.html
+++ b/main.html
@@ -288,7 +288,7 @@
 
 <header>
     <div class="container navbar-wrapper">
-        <a href="#" class="brand">
+        <a href="main.html" class="brand">
             <i class="fa-solid fa-building-columns"></i> Sodiq GrandSon
         </a>
         
@@ -297,7 +297,7 @@
         </div>
 
         <ul class="menu" id="nav-menu">
-            <li><a href="#" class="active"><i class="fa-solid fa-house"></i> HOME</a></li>
+            <li><a href="main.html" class="active"><i class="fa-solid fa-house"></i> HOME</a></li>
 
             <li class="has-sub">
                 <a href="javascript:void(0)" onclick="toggleSub(this)">KEUANGAN <i class="fa-solid fa-chevron-down arrow-down"></i></a>
@@ -373,24 +373,27 @@
 <div class="container">
     <div class="grid-container">
         <div class="card">
-            <div class="card-icon"><i class="fa-solid fa-coins"></i></div>
-            <h3>Keuangan</h3>
-            <p>Akses laporan akunting, arus kas, dan backup transaksi.</p>
+            <a href="DetailPerumahan.html">
+            <div class="card-icon"><i class="fa-solid fa-house"></i></div>
+            <h3>Detail perumahan</h3>
+            <p>Site Plan, denah rumah, arsitektur</p></a>
         </div>
         <div class="card">
-            <div class="card-icon"><i class="fa-solid fa-helmet-safety"></i></div>
-            <h3>Project Control</h3>
+            <a href="https://maps.app.goo.gl/RGH4yMVhdBu6ekrp6" target="_blank">
+            <div class="card-icon"><i class="fa-solid fa-location-crosshairs"></i></div>
+            <h3>Lokasi perumahan</h3>
             <p>Monitoring progres rumah, saluran, dan laporan mingguan.</p>
+            </a>
         </div>
         <div class="card">
-            <div class="card-icon"><i class="fa-solid fa-bullhorn"></i></div>
-            <h3>Marketing</h3>
-            <p>Data plotting site plan, berkas KPR, dan performa web.</p>
+            <div class="card-icon"><i class="fa-solid fa-camera"></i></div>
+            <h3>Foto progres</h3>
+            <p>Foto fisik rumah dan fasum</p>
         </div>
         <div class="card">
-            <div class="card-icon"><i class="fa-solid fa-warehouse"></i></div>
-            <h3>Gudang</h3>
-            <p>Manajemen stok indul dan inventaris proyek lapangan.</p>
+            <div class="card-icon"><i class="fa-solid fa-calendar"></i></div>
+            <h3>Update Site Plan</h3>
+            <p>Update site plan penjualan</p>
         </div>
     </div>
 </div>
@@ -448,5 +451,6 @@
 </body>
 
 </html>
+
 
 
