--- a/main.html
+++ b/main.html
@@ -386,14 +386,18 @@
             </a>
         </div>
         <div class="card">
+            <a href="FotoProgres.html">
             <div class="card-icon"><i class="fa-solid fa-camera"></i></div>
             <h3>Foto progres</h3>
             <p>Foto fisik rumah dan fasum</p>
+            </a>
         </div>
         <div class="card">
+            <a href="UpdateSitePlan.html">
             <div class="card-icon"><i class="fa-solid fa-calendar"></i></div>
             <h3>Update Site Plan</h3>
             <p>Update site plan penjualan</p>
+            </a>
         </div>
     </div>
 </div>
